<resources>
    <string name="app_name">Dashboard Islami</string>
    <string name="welcome">Assalamualaikum, Fulan</string>
    <string name="txt_menu_dzikir">Dzikir</string>
    <string name="txt_menu_zakat">Zakat</string>
    <string name="txt_menu_jadwal_shalat">Jadwal\nShalat</string>
    <string name="txt_menu_video_kajian">Video\nKajian</string>
    <string name="txt_menu_doa">Doa</string>
    <string name="inspiration">Inspiration</string>
    <string name="rumah">Doa Rumah</string>
    <string name="makanan_dan_minuman">Makanan &amp; Minuman</string>
    <string name="pagi_dan_malam">Doa Pagi &amp; Malam</string>
    <string name="perjalanan">Doa Perjalanan</string>
    <string name="shalat">Doa Shalat</string>
    <string name="etika_baik">Etika Baik</string>
    <string name="doa_makanan_dan_minuman">Doa Makanan Dan Minuman</string>
    <string name="harga_emas_16_oct_2023">Harga Emas - 16 Oct 2023</string>
    <string name="_1_gram">1 Gram</string>
    <string name="rp_1_087_000">Rp. 1.087.000</string>
    <string name="rp_92_395_000">Rp. 92.395.000</string>
    <string name="total_kesuluruhan_harta">Total Kesuluruhan Harta</string>
    <string name="hitung">Hitung Zakat</string>
    <string name="status">Status</string>
    <string name="wajib">Wajib</string>
    <string name="zakat_yang_dikeluarkan">Zakat Yang Dikeluarkan</string>
    <string name="_85_gram">85 Gram</string>
    <string name="total_harta_keseluruhan">Total Harta Keseluruhan</string>
    <string name="selasa_7_november">Selasa, 7 November</string>
    <string name="karanganyar">Karanganyar</string>
    <string name="lorem_ipsum_dolor_amet">lorem ipsum dolor amet</string>
    <string name="judul_kajian">judul kajian</string>
    <string name="channel_youtube">channel youtube</string>
    <string name="nama_penceramaha">nama penceramaha</string>
    <string name="detail_kanjian">detail kanjian</string>
</resources>