<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite">

        <ImageView
            android:id="@+id/img_header"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="@drawable/bg_header_dashboard_morning"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/txt_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_rounded_text_view"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/welcome"
            android:textColor="@color/colorText" />

        <HorizontalScrollView
            android:id="@+id/list_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_header"
            android:layout_marginHorizontal="16dp"
            android:background="@drawable/bg_rounded_menu"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingEnd="50dp">

                <!--Doa menu-->
                <LinearLayout
                    android:id="@+id/btn_doa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_menu_doa" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="@string/txt_menu_doa"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp" />

                </LinearLayout>

                <!--Dzikir menu-->
                <LinearLayout
                    android:id="@+id/btn_dzikir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:orientation="vertical"/>

                <!--Zakat menu-->
                <LinearLayout
                    android:id="@+id/btn_zakat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_menu_zakat" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="@string/txt_menu_zakat"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp" />

                </LinearLayout>

                <!--Jadwal Shalat menu-->
                <LinearLayout
                    android:id="@+id/btn_jadwal_shalat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_menu_jadwal_sholat" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="@string/txt_menu_jadwal_shalat"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp" />

                </LinearLayout>

                <!--Video Kajian menu-->
                <LinearLayout
                    android:id="@+id/btn_video_kajian"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_menu_video_kajian" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/poppins_semi_bold"
                        android:text="@string/txt_menu_video_kajian"
                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/txt_inspiration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_menu"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/inspiration"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_inspiration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_inspiration"
            tools:listitem="@layout/item_row_inspiration"/>

    </RelativeLayout>

</ScrollView>